reference bug fix